# django-ninja-fsbr

./: .gitignore  LICENSE  README.md  ninja_fsbr.py  pyproject.toml
test_project/test_project/: settings.py  urls.py
test_project/test_project/views/pets/: index.py
test_project/test_project/views/pets/pet_id/: index.py
