[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Fabian Binz", email = "fabian.binz@gmail.com" }]
dependencies = ["django-ninja"]
dynamic = ["version", "description"]
name = "django-ninja-fsbr"
readme = "README.md"

[project.urls]
Home = "https://github.com/fbinz/django-ninja-fsbr"

[tool.flit.module]
name = "ninja_fsbr"
